--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-build/CmakeFiles/*
-build/TestData/*
-build/CmakeCache.txt
-build/CmakeLists.txt
-build/main
-build/Makefile
+/build/CmakeFiles/*
+/build/TestData/*
+/build/CmakeCache.txt
+/build/CmakeLists.txt
+/build/main
+/build/Makefile
+/engine/build/*
