--- a/engine/release/CMakeLists.txt
+++ b/engine/release/CMakeLists.txt
@@ -4,6 +4,10 @@ set(CMAKE_CXX_FLAGS   "-std=c++11 -g -pthread")
  
 PROJECT(kvdb)
 
+#it's depended
+#include_directories("/usr/java/jdk1.8.0_181/include")
+#include_directories("/usr/java/jdk1.8.0_181/include/linux")
+
 AUX_SOURCE_DIRECTORY(.. DIR_SRCS)
 
 ADD_LIBRARY(kvdb SHARED ${DIR_SRCS})
